# pocketbase-sdk-rust

./: .gitignore  Cargo.toml
firedbg/: version.toml
pocketbase-sdk-rust/: Cargo.toml
pocketbase-sdk-rust/examples/: collections.rs  health_check.rs  logs.rs  records.rs
pocketbase-sdk-rust/src/: admin.rs  client.rs  collections.rs  httpc.rs  lib.rs  logs.rs  records.rs  rts.rs  settings.rs
pocketbase-sdk-rust/src/realtime/: change.rs  mod.rs  store.rs
pocketbase-sdk-rust/tests/: authenticate_admin.rs  authenticate_record.rs  collections.rs  health_check.rs  records.rs  rts_tests.rs  settings_tests.rs
src/: settings.rs
test-app/: Cargo.toml  Dioxus.toml
test-app/src/: main.rs
tests/: authenticate_admin.rs  authenticate_record.rs  collections.rs  constants.rs  records.rs  settings.rs
