[package]
name = "pocketbase-sdk"
version = "0.1.1"
edition = "2021"
authors = [
  "Sreedev Kodichath <sreedev@icloud.com>",
  "CubeCoder <markus.hamacher16@gmail.com>",
  "uxsoft <me@uxsoft.cz>",
]
license = "MIT"
description = "Pocketbase SDK"
readme = "README.md"
homepage = "https://github.com/sreedevk/pocketbase-sdk-rust"
categories = ["development-tools"]
keywords = ["pocketbase", "pocketbase-sdk", "rust-pocketbase", "pocketbase-rs"]

[dependencies]
anyhow = "1.0.78"
chrono = { version = "0.4.24", features = ["serde"] }
eventsource-stream = "0.2.3"
reqwest = { version = "0.11.23", features = ["stream", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
