[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
eventsource-stream = "0.2.3"
futures = "0.3.30"
reqwest = { version = "0.11.23", features = ["stream"] }
pocketbase-sdk = { path = "../pocketbase-sdk-rust" }
anyhow = "*"
serde = { version = "*", features = [] }
serde_json = "*"
